<resources>
    <string name="app_name">Simple Chat</string>
    <string name="simple_chat">Simple Chat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_bit_about_app">Quite <b>ordinary</b> messaging app.\nIt is <b>free</b> and <b>may not</b> secure.</string>
    <string name="start_messaging">Start Messaging</string>
    <string name="login">Login</string>
    <string name="continue_with">Continue with your phone number\nor social media.</string>
    <string name="google_plus">Google+</string>
    <string name="facebook">facebook</string>
    <string name="new_conversation">New conversation</string>
    <string name="new_group">New Group</string>
    <string name="saved_messages">Saved Messages</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="faq">FAQ</string>
    <string name="profile_image">Profile image</string>
    <string name="search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="please_confirm_your_country_code_and_enter_your_phone_number">Please confirm your country code and enter your phone\nnumber.</string>
    <string name="phone_number_is_incorrect">Your phone number is incorrect</string>
    <string name="your_phone">Your Phone</string>
    <string name="verification_code_was_sent">The verification code was sent\nto your phone via <b>SMS</b></string>
    <string name="code_was_sent_image">Code was sent image</string>
    <string name="stop_verification_process">Do you want to stop the verification process?</string>
    <string name="stop">Stop</string>
    <string name="_continue">Continue</string>
    <string name="if_something_went_wrong"><a href="#">If something went wrong -- contact us.</a></string>
    <string name="your_name">Your name</string>
    <string name="logo_image">Logo image</string>
    <string name="finally_enter_your_name_and_surname"><b>Finally,</b> enter your name and surname!</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="wrong_name_or_surname">Wrong name or surname!</string>
    <string name="online">online</string>
    <string name="share">Share</string>
    <string name="author_contact">https://t.me/thejunglegiant</string>
    <string name="or">or</string>
    <string name="check_out_this_perfect_chat">Check out this perfect chat!</string>
    <string name="github_author_url">https://github.com/thejunglegiant/SimpleChat</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="tick_logo">Tick logo</string>
    <string name="members">members</string>
    <string name="member">member</string>
    <string name="need_to_add_at_least_1_users">You need to add at least one users!</string>
    <string name="enter_group_name_first">Enter group name first!</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="message">Message</string>
    <string name="network_unavailable">Network unavailable: please check your data connection</string>
    <string name="offline">offline</string>
    <string name="channel_name">Direct messages</string>
    <string name="channel_description">Messages which were send to you directly from someone or any group.</string>
    <string name="leave_room">Leave room</string>
    <string name="left_the_group">left the group</string>
    <string name="is_typing">is typing</string>
    <string name="edit_text">Edit text</string>
    <string name="copy_text">Copy text`</string>
    <string name="save_message">Save message</string>
    <string name="delete_message">Delete message</string>
    <string name="messages_were_saved">Selected messages were saved!</string>
</resources>
