<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".authentication.LoginFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="lottie/paper_plane_flying.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView"
        style="@style/bigTitle" />

    <TextView
        android:id="@+id/textView2"
        style="@style/textStandard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_with"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2">

        <ImageButton
            android:id="@+id/google_button"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_marginEnd="@dimen/def_margin"
            android:background="@drawable/gcustom_button"
            android:contentDescription="@string/google_plus" />
        <ImageButton
            android:id="@+id/phone_button"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_marginStart="@dimen/def_margin"
            android:background="@drawable/phcustom_button"
            android:contentDescription="@string/facebook" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>