<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
        app:lottie_autoPlay="true"
        app:lottie_fileName="lottie/invite_friends.json"
        app:lottie_loop="true"
        app:lottie_speed="0.5" />

    <com.oleksii.simplechat.customviews.EasyCopyEditText
        android:id="@+id/my_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/def_margin"
        android:inputType="textUri"
        android:paddingHorizontal="16dp"
        android:text="@string/author_contact"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/share_button"
        app:layout_constraintStart_toStartOf="@+id/share_button" />

    <TextView
        android:id="@+id/textView"
        style="@style/textStandard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/def_margin"
        android:text="@string/or"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/share_button"
        app:layout_constraintEnd_toEndOf="@+id/share_button"
        app:layout_constraintStart_toStartOf="@+id/share_button" />

    <Button
        android:id="@+id/share_button"
        style="@style/textStandard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="86dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/transparent_button"
        android:drawableStart="@drawable/ic_share"
        android:drawablePadding="@dimen/def_margin"
        android:paddingHorizontal="@dimen/biggest_margin"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>