<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.VerifyPhoneNumberFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="@dimen/big_margin"
        android:contentDescription="@string/code_was_sent_image"
        android:src="@drawable/verification_code_sent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />

    <TextView
        android:id="@+id/textView"
        style="@style/textStandard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/def_margin"
        android:layout_marginEnd="16dp"
        android:text="@string/verification_code_was_sent"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/code_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/biggest_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:layout_marginEnd="@dimen/biggest_margin"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="6"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:pinLineStroke="2dp"
        app:pinLineStrokeSelected="4dp"
        app:pinTextBottomPadding="@dimen/small_margin" />

    <TextView
        android:id="@+id/contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/def_margin"
        android:autoLink="all"
        android:gravity="center"
        android:text="@string/if_something_went_wrong"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/code_text"
        app:layout_constraintStart_toStartOf="@+id/code_text"
        app:layout_constraintTop_toBottomOf="@+id/code_text" />

</androidx.constraintlayout.widget.ConstraintLayout>